_generated-config/2.7/config/quarkus-micrometer.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer_configuration]]link:#quarkus-micrometer_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.enabled[quarkus.micrometer.enabled]`

[.description]
--
Micrometer metrics support. 
 Micrometer metrics support is enabled by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.registry-enabled-default]]`link:#quarkus-micrometer_quarkus.micrometer.registry-enabled-default[quarkus.micrometer.registry-enabled-default]`

[.description]
--
Micrometer MeterRegistry discovery. 
 Micrometer MeterRegistry implementations discovered on the classpath will be enabled automatically by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder-enabled-default]]`link:#quarkus-micrometer_quarkus.micrometer.binder-enabled-default[quarkus.micrometer.binder-enabled-default]`

[.description]
--
Micrometer MeterBinder discovery. 
 Micrometer MeterBinder implementations discovered on the classpath will be enabled automatically by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.http-client.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-client.enabled[quarkus.micrometer.binder.http-client.enabled]`

[.description]
--
Outbound HTTP request metrics support. 
 Support for HTTP client metrics will be enabled if Micrometer support is enabled, the REST client feature is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.http-server.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-server.enabled[quarkus.micrometer.binder.http-server.enabled]`

[.description]
--
Inbound HTTP metrics support. 
 Support for HTTP server metrics will be enabled if Micrometer support is enabled, an extension serving HTTP traffic is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.jvm]]`link:#quarkus-micrometer_quarkus.micrometer.binder.jvm[quarkus.micrometer.binder.jvm]`

[.description]
--
Micrometer JVM metrics support. 
 Support for JVM metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.kafka.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.kafka.enabled[quarkus.micrometer.binder.kafka.enabled]`

[.description]
--
Kafka metrics support. 
 Support for Kafka metrics will be enabled if Micrometer support is enabled, the Kafka Consumer or Producer interface is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.grpc-server.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.grpc-server.enabled[quarkus.micrometer.binder.grpc-server.enabled]`

[.description]
--
gRPC Server metrics support. 
 Support for gRPC server metrics will be enabled if Micrometer support is enabled, the gRPC server interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.grpc-client.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.grpc-client.enabled[quarkus.micrometer.binder.grpc-client.enabled]`

[.description]
--
gRPC Client metrics support. 
 Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.mp-metrics.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.mp-metrics.enabled[quarkus.micrometer.binder.mp-metrics.enabled]`

[.description]
--
Eclipse MicroProfile Metrics support.

Support for MicroProfile Metrics will be enabled if Micrometer
support is enabled and the MicroProfile Metrics dependency is present:

[source,xml]
----
<dependency>
  <groupId>org.eclipse.microprofile.metrics</groupId>
  <artifactId>microprofile-metrics-api</artifactId>
</dependency>
----

The Micrometer extension currently provides a compatibility layer that supports the MP Metrics API,
but metric names and recorded values will be different.
Note that the MP Metrics compatibility layer will move to a different extension in the future.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.system]]`link:#quarkus-micrometer_quarkus.micrometer.binder.system[quarkus.micrometer.binder.system]`

[.description]
--
Micrometer System metrics support. 
 Support for System metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.binder.vertx.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.binder.vertx.enabled[quarkus.micrometer.binder.vertx.enabled]`

[.description]
--
Vert.x metrics support. 
 Support for Vert.x metrics will be enabled if Micrometer support is enabled, Vert.x MetricsOptions is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.json.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.export.json.enabled[quarkus.micrometer.export.json.enabled]`

[.description]
--
Support for export to JSON format. Off by default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.json.path]]`link:#quarkus-micrometer_quarkus.micrometer.export.json.path[quarkus.micrometer.export.json.path]`

[.description]
--
The path for the JSON metrics endpoint. The default value is `metrics`.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.json.buffer-length]]`link:#quarkus-micrometer_quarkus.micrometer.export.json.buffer-length[quarkus.micrometer.export.json.buffer-length]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after the expiry, with this buffer length.
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.json.expiry]]`link:#quarkus-micrometer_quarkus.micrometer.export.json.expiry[quarkus.micrometer.export.json.expiry]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after this expiry, with a particular buffer length.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`P3D`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.prometheus.enabled]]`link:#quarkus-micrometer_quarkus.micrometer.export.prometheus.enabled[quarkus.micrometer.export.prometheus.enabled]`

[.description]
--
Support for export to Prometheus. 
 Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.registry-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.prometheus.path]]`link:#quarkus-micrometer_quarkus.micrometer.export.prometheus.path[quarkus.micrometer.export.prometheus.path]`

[.description]
--
The path for the prometheus metrics endpoint (produces text/plain). The default value is
`metrics` and is resolved relative to the non-application endpoint (`q`), e.g.
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served
from the configured path.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer_quarkus.micrometer.export.prometheus.default-registry]]`link:#quarkus-micrometer_quarkus.micrometer.export.prometheus.default-registry[quarkus.micrometer.export.prometheus.default-registry]`

[.description]
--
By default, this extension will create a Prometheus MeterRegistry instance. 
 Use this attribute to veto the creation of the default Prometheus MeterRegistry.
--|boolean 
|`true`


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-client.match-patterns]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-client.match-patterns[quarkus.micrometer.binder.http-client.match-patterns]`

[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Outbount HTTP client instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.
--|list of string 
|


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-client.ignore-patterns]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-client.ignore-patterns[quarkus.micrometer.binder.http-client.ignore-patterns]`

[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).
--|list of string 
|


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-client.max-uri-tags]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-client.max-uri-tags[quarkus.micrometer.binder.http-client.max-uri-tags]`

[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.
--|int 
|`100`


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-server.match-patterns]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-server.match-patterns[quarkus.micrometer.binder.http-server.match-patterns]`

[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Vertx instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.
--|list of string 
|


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-server.ignore-patterns]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-server.ignore-patterns[quarkus.micrometer.binder.http-server.ignore-patterns]`

[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).
--|list of string 
|


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-server.suppress-non-application-uris]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-server.suppress-non-application-uris[quarkus.micrometer.binder.http-server.suppress-non-application-uris]`

[.description]
--
Suppress non-application uris from metrics collection.
This will suppress all metrics for non-application endpoints using
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.

Suppressing non-application uris is enabled by default.
--|boolean 
|`true`


a| [[quarkus-micrometer_quarkus.micrometer.binder.http-server.max-uri-tags]]`link:#quarkus-micrometer_quarkus.micrometer.binder.http-server.max-uri-tags[quarkus.micrometer.binder.http-server.max-uri-tags]`

[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.
--|int 
|`100`


a| [[quarkus-micrometer_quarkus.micrometer.export.prometheus-prometheus]]`link:#quarkus-micrometer_quarkus.micrometer.export.prometheus-prometheus[quarkus.micrometer.export.prometheus]`

[.description]
--
Prometheus registry configuration properties.

A property source for configuration of the Prometheus MeterRegistry,
see https://micrometer.io/docs/registry/prometheus.
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
